# switch-case-generator

./: .gitignore  CMakeLists.txt
src/: switch-case-generator.cc
